--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2",
     "uuid": "^8.3.2",
@@ -26,6 +27,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^15.3.1",
     "@types/sqlite3": "^3.1.8",
     "@types/uuid": "^8.3.3",
