--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "react-hot-toast": "^2.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "react-use": "^17.3.2"
   },
   "scripts": {
     "dev": "react-scripts start",
