--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@types/react-timeago": "^4.1.3",
     "axios": "^0.24.0",
     "react": "^17.0.2",
+    "react-click-away-listener": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-hot-toast": "^2.1.1",
