--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-hot-toast": "^2.1.1",
+    "react-quill": "^2.0.0-beta.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-timeago": "^6.2.1",
