--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-timeago": "^4.1.3",
     "axios": "^0.24.0",
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-click-away-listener": "^2.0.5",
     "react-dom": "^17.0.2",
