feat: added mounting to the DB:

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ services:
   my-diary-backend:
     build: ./backend
     volumes:
-      - ./backend/database.db:/app/database.db
+      - ~/database/database.db:/app/database.db
     ports:
       - "8080:8080"
+    restart: unless-stopped
     command: npm start
