--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   my-diary-backend:
     build: ./backend
     volumes:
-      - ./database.db:/app/database.db
+      - ~/database/database.db:/app/database.db
     ports:
       - "443:8080"
     restart: unless-stopped
