--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,6 +16,7 @@ WORKDIR /app
 
 COPY --from=build /app/dist dist
 COPY --from=build /app/package*.json ./
+COPY --from=build /app/.env ./
 
 RUN npm ci --production
 
